# oxygine-dragonbones

./: .hg_archival.txt  .hgignore  CMakeLists.txt
examples/Hello/data/: res.xml
examples/Hello/data/cyborg/: skeleton.xml  texture.xml
examples/Hello/data/db/: skeleton.xml  texture.xml
examples/Hello/data/knight/: skeleton.xml  texture.xml
examples/Hello/proj.win32/: HelloWorld.VC.VC.opendb  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
examples/Hello/src/: example.cpp  main.cpp
src/: Character.cpp  Character.h
src/lib/: Animation.cpp  Animation.h  Armature.cpp  Armature.h  Bone.cpp  Bone.h  Display.cpp  Display.h  Frame.cpp  Frame.h  Skeleton.cpp  Skeleton.h  Skin.cpp  Skin.h  Slot.cpp  Slot.h  Timeline.cpp  Timeline.h  Transform.cpp  Transform.h  db.h
